--- a/input.scss
+++ b/input.scss
@@ -13,8 +13,73 @@ body {
   background-color: $violet;
   background-repeat: no-repeat;
   background-size: auto 100%;
+  color: white;
+  font-family: "Open Sans", sans-serif;
 
   @media screen and (max-width: 375px) {
     background-image: url("./images/bg-mobile.svg");
+  }
+}
+
+#root {
+  max-width: 1440px;
+  margin: auto;
+  padding: 1rem;
+}
+
+header {
+  padding: 2rem 0;
+}
+
+main {
+  section {
+    display: flex;
+    gap: 2rem;
+    @media screen and (max-width: 800px) {
+      flex-direction: column;
+    }
+  }
+}
+
+#illustration {
+  flex: 60%;
+  img {
+    width: 100%;
+  }
+}
+
+#message {
+  flex: 40%;
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  h2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+  }
+  p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  @media screen and (max-width: 375px) {
+    text-align: center;
+    align-items: center;
+  }
+}
+
+#register-btn {
+  border: none;
+  outline: none;
+  width: 180px;
+  height: 40px;
+  color: $violet;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+
+  &:hover {
+    background-color: $soft-magenta;
+    color: white;
   }
 }
