--- a/output.css
+++ b/output.css
@@ -20,9 +20,13 @@ body {
 }
 
 #root {
+  height: 100vh;
   max-width: 1440px;
   margin: auto;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header {
@@ -81,6 +85,26 @@ main section {
 #register-btn:hover {
   background-color: hsl(300deg, 69%, 71%);
   color: white;
+}
+
+footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  padding: 2rem 0;
+}
+@media screen and (max-width: 375px) {
+  footer {
+    justify-content: center;
+  }
+}
+
+svg {
+  color: white;
+  cursor: pointer;
+}
+svg:hover {
+  fill: hsl(300deg, 69%, 71%);
 }
 
 /*# sourceMappingURL=output.css.map */
